2005-07-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_setup),
	(gnome_volume_applet_toggle_mute),
	(gnome_volume_applet_get_volume), (cb_volume),
	(gnome_volume_applet_refresh), (cb_gconf):
	* applet.h:
	  Workaround some apparent "lag" in volume changes being propagated
	  to the tooltip string, and fix "wubbly" tooltip by only setting a
	  new one when it changed (#311255).

2005-07-20  Davyd Madeley  <davyd@madeley.id.au>

	* docs/Makefile.am:
	* docs/mixer_applet2.omf.in:
	* docs/C/mixer_applet2.xml: gnome-doc-utils

	* docs/*: Removed unwanted cruft.

2005-06-10  Ryan Lortie  <desrt@desrt.ca>

	* applet.c: (select_element_and_track): Properly initialise
	  'active_tracks' variable to NULL.   Remove unused 'test'
	  variable.

2005-06-10  Ryan Lortie  <desrt@desrt.ca>

	* applet.c: (gnome_volume_applet_scroll): Small fix for showing
	  dialog on first user interaction:  return TRUE on the event handler
	  and double-check for non-null before invoking a callback function.

2005-06-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_setup), (show_no_mixer_dialog),
	(gnome_volume_applet_scroll), (gnome_volume_applet_button),
	(gnome_volume_applet_key), (gnome_volume_applet_refresh),
	(cb_verb), (cb_ui_event):
	* load.c: (gnome_volume_applet_factory):
	  If no elements/devices present, don't show a dialog to the user;
	  instead, show a insensitive/mute icon, and show the dialog on a
	  user action (only once).

2005-06-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_run_mixer):
	  Woops, re-add some code.

2005-06-10  Jordan Saunders  <jmsaunders@rogers.com>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* applet.c: (gnome_volume_applet_init), (parse_track_list),
	(select_tracks), (select_element_and_track),
	(gnome_volume_applet_setup), (gnome_volume_applet_dispose),
	(gnome_volume_applet_toggle_mute):
	* applet.h: